tests/test_files_pa3/SemanticErrors/badScope_2.ic
class A {

     static void main(string[] args){}
     
     void complexScope() {
           
           string a;
            
           {
				a = 4;
                int a = a;
           }
           
          

     }
     
     int a;
    
}